[package]
name = "zebo"
description = "Write data on FS in a performance way"
version = "0.4.8"
edition = "2024"
license = "Apache-2.0"
authors = [
  "Tommaso Allevi <tomallevi@gmail.com>",
]
documentation = "https://docs.rs/zebo"
repository = "https://github.com/oramasearch/zebo"
homepage = "https://crates.io/crates/zebo"
keywords = [ "filesystem", "performance", "datastorage" ]
categories = [ "filesystem" ]

[lib]
name = "zebo"

[[bin]]
name = "zebo-inspect"
path = "src/bin/zebo-inspect.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = "0.3.20"
